Fix the modal
The layout of the modal was inconsistent which needed layout shifts and some styling

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -18,8 +18,11 @@ body {
 .modal {
   background: white;
   width: 480px;
+  display: flex;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 1rem;
+  gap: 1rem;
 }
 
 .icon {
@@ -33,6 +36,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.header {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 .close-button {
@@ -66,4 +81,10 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.modal-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
